--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qf.js",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,9 @@
     "start": "webpack-dev-server --open --mode development"
   },
   "keywords": [],
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "author": "301stars",
   "license": "ISC",
   "devDependencies": {
